--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -2,37 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-01-22 19:59:49.779420: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-01-22 19:59:49.779823: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-01-22 19:59:49.782281: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-01-22 19:59:49.788887: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1737575989.800297   42022 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1737575989.803342   42022 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-01-22 19:59:49.815115: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt \n",
     "import cv2\n",
-    "import os"
+    "import os\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +28,7 @@
        "(224, 224, 3)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x707bbbed0e00>"
+       "<matplotlib.image.AxesImage at 0x76d82e84fd10>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -83,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_datasets(imgSize):\n",
-    "    path_train = \"archive/train/\"\n",
-    "    emotion_labels = [f for f in os.listdir(path_train)]\n",
+    "    path_train = \"archive/test/\"\n",
+    "    emotion_labels = ['neutral', 'happy', 'angry', 'surprise', 'disgust', 'fear', 'sad']\n",
     "    X = []\n",
     "    y = []\n",
     "    for emotion in emotion_labels:\n",
@@ -99,7 +86,7 @@
     "            imgArry = cv2.imread(img_path)\n",
     "            resized_img = cv2.resize(imgArry, (imgSize, imgSize))\n",
     "            X.append(resized_img)\n",
-    "            y.append(emotionPath.index(emotion))\n",
+    "            y.append(emotion_labels.index(emotion))\n",
     "            cv2.imwrite(img_path, resized_img)   #img is formated with new img of new size\n",
     "    X = np.array(X)\n",
     "    y = np.array(y)\n",
@@ -113,80 +100,132 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 19  19  19]\n",
-      "  [ 19  19  19]\n",
-      "  [ 20  20  20]\n",
-      "  ...\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]]\n",
-      "\n",
-      " [[ 19  19  19]\n",
-      "  [ 19  19  19]\n",
-      "  [ 20  20  20]\n",
-      "  ...\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]]\n",
-      "\n",
-      " [[ 19  19  19]\n",
-      "  [ 19  19  19]\n",
-      "  [ 19  19  19]\n",
-      "  ...\n",
-      "  [ 16  16  16]\n",
-      "  [ 16  16  16]\n",
-      "  [ 16  16  16]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[119 119 119]\n",
-      "  [119 119 119]\n",
-      "  [119 119 119]\n",
-      "  ...\n",
-      "  [155 155 155]\n",
-      "  [155 155 155]\n",
-      "  [155 155 155]]\n",
-      "\n",
-      " [[118 118 118]\n",
-      "  [119 119 119]\n",
-      "  [119 119 119]\n",
-      "  ...\n",
-      "  [155 155 155]\n",
-      "  [155 155 155]\n",
-      "  [155 155 155]]\n",
-      "\n",
-      " [[119 119 119]\n",
-      "  [120 120 120]\n",
-      "  [120 120 120]\n",
-      "  ...\n",
-      "  [155 155 155]\n",
-      "  [155 155 155]\n",
-      "  [156 156 156]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(X[0])   #what we did is stored array of img to correspding emotion index "
+    "chunkSize = 200\n",
+    "scaler = StandardScaler()\n",
+    "for i in range(0, X.shape[0], chunkSize):\n",
+    "    X_chunk = X[i:i+chunkSize].reshape(len(X[i:i+chunkSize]), -1).astype(np.float32)\n",
+    "    X_chunk = scaler.fit_transform(X_chunk)\n",
+    "    X[i:i+chunkSize] = X_chunk.reshape(len(X_chunk), imgSize, imgSize, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7178, 224, 224, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "encoder = OneHotEncoder(sparse_output=False)\n",
+    "y_reshaped = np.array(y).reshape(-1, 1)\n",
+    "y_categorical = encoder.fit_transform(y_reshaped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7178, 7)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_categorical.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emotion_recognition_data_train.pkl']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#joblib.dump((X, y_categorical), 'emotion_recognition_data_train.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emotion_recognition_data_test.pkl']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump((X, y_categorical), 'emotion_recognition_data_test.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., ..., 0., 0., 0.],\n",
+       "       [1., 0., 0., ..., 0., 0., 0.],\n",
+       "       [1., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 1.],\n",
+       "       [0., 0., 0., ..., 0., 0., 1.],\n",
+       "       [0., 0., 0., ..., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_categorical"
+   ]
   }
  ],
  "metadata": {
